# guiextensions

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .readthedocs.yml  MANIFEST.in  pyproject.toml  setup.py
ci/: build.py  build.sh  cleanup.cmd  lint  prepare.sh  test.sh  upload.sh
doc/: Makefile  make.bat  requirements.txt
doc/source/: conf.py  gui_scene_development.rst  gui_widget_development.rst  index.rst  install_latest_version.rst  intro.rst  requirements.txt  whats_new.rst  widget_documentation.rst
doc/source/images/: .gitignore
src/ci/: prepare
src/extensions/: BPMPositionWidget.py  ImagePixMap.py  api.py  beam_graph.py  conftest.py  display_base64_string.py  display_beam_graph.py  display_colored_label.py  display_condition.py  display_critical_compare_view.py  display_detector_cells.py  display_device_reconfiguration_table.py  display_doocs_location_table.py  display_doocs_mirror_table.py  display_doocs_table.py  display_doocs_table_links.py  display_dynamic_digitizer.py  display_dynamic_graph.py  display_extended_vector_xy_graph.py  display_file_uploader.py  display_historian_table.py  display_image_crosshair_graph.py  display_ipm_quadrant.py  display_live_data_indicator.py  display_networkx.py  display_polar_plot.py  display_progress_table.py  display_pulse_info.py  display_recovery_compare_view.py  display_recovery_report_table.py  display_roi_graph.py  display_scantool_device_view.py  display_scantool_dynamic.py  display_scatter_position.py  display_slider_bar.py  display_special_column_table.py  display_ticked_image_graph.py  display_trigger_slice_graph.py  display_two_axis_graph.py  display_uncertainty_graph.py  (+18 more)
src/extensions/amore/: additional_color_bar.py  annotation.ui  annotation_dialog_and_display.py  aux_filtering_and_plotting.py  constants.py  constants_keys.py  display_roi_annotate.py  displaying_from_past.py  roi_annotator.py  roi_requestor.py  utils.py
src/extensions/amore/tests/: test_display_roi_annotate.py
src/extensions/daq/: display_runhistory.py  edit_runassistant.py  selection_dialog.py  toolbar.py  utils.py
src/extensions/daq/tests/: test_runassistant.py  test_runmonitor.py  test_selection_dialog.py
src/extensions/daq/ui/: exclude_dialog.ui  group_filter.ui
src/extensions/dialogs/: api.py  compare_dialog.py  device_configuration_view_dialog.py  motor_stage_configuration_view_dialog.py  scantool_device_dialog.py  utils.py
src/extensions/event_manager/: display_active_events_table.py  edit_event_configuration_view.py  edit_notification_configuration_view.py
src/extensions/icons/: __init__.py
src/extensions/metro/: roi_graph.py  secaxis_graph.py  twinx_graph.py  utils.py  xas_graph.py  zone_plate.py
src/extensions/models/: api.py  complex.py  detectors.py  images.py  metro.py  networkx.py  plots.py  simple.py  tables.py  utils.py
src/extensions/scantool/: const.py  controller.py  device_tree.py  display_scantool_device_view.py  display_scantool_dynamic.py  edit_scantool_templates.py  utils.py  widget.py  widgets.py
src/extensions/tests/: __init__.py  test_beam_graph.py  test_code_quality.py  test_datetime_edit.py  test_detector_cells.py  test_display_base64_string.py  test_display_condition.py  test_display_image_crosshair_graph.py  test_display_live_data_indicator.py  test_display_two_axis_graph.py  test_doocs_locations_tables.py  test_doocs_mirrors_tables.py  test_dynamic_graph.py  test_edit_code_editor.py  test_edit_limited_lineedit.py  test_edit_options_text.py  test_extended_vector_xy_graph.py  test_file_uploader.py  test_historian_table_global.py  test_imports.py  test_ipm_quadrant.py  test_motor_assignment_table.py  test_networkx.py  test_peak_integration_graph.py  test_point_click.py  test_polar_plot.py  test_progress_table.py  test_pulse_info.py  test_recovery_comparison.py  test_roi_graph.py  test_scantool_device_view.py  test_scantool_dynamic.py  test_scantool_templates.py  test_selection_convenience_table.py  test_special_column_table.py  test_stateaware_component_manager.py  test_ticked_image_graph.py  test_trigger_slice_graph.py  test_uncertainty_graph.py  test_utils.py  (+3 more)
(+45 files in other folders)
