[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=6.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
write_to = "src/extensions/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"extensions" = ["dialogs/ui/*.ui", "icons/*.svg", "daq/ui/*.ui", "scan_tool/dialogs/*.ui", "amore/*.ui"]

[project.entry-points."karabogui.gui_extensions"]
ActiveEventsTable = "extensions.event_manager.display_active_events_table"
Amore = "extensions.amore.display_roi_annotate"
BeamGraph = "extensions.display_beam_graph"
CircleRoiGraph = "extensions.roi_graph"
CodeEditor = "extensions.edit_code_editor"
ColoredLabel = "extensions.display_colored_label"
ConditionCommand = "extensions.display_condition"
DateTimeEdit = "extensions.edit_datetime_label"
DetectorCells = "extensions.display_detector_cells"
DeviceReconfigurationTable = "extensions.display_device_reconfiguration_table"
DoocsMirrorTable = "extensions.display_doocs_mirror_table"
DoocsLocationTable = "extensions.display_doocs_location_table"
DynamicDigitizer = "extensions.display_dynamic_digitizer"
DynamicGraph = "extensions.display_dynamic_graph"
ExtendedVectorXYGraph = "extensions.display_extended_vector_xy_graph"
EditableTextOptions = "extensions.edit_text_options"
EventConfigurationView = "extensions.event_manager.edit_event_configuration_view"
FileUploader = "extensions.display_file_uploader"
IPMQuadrant = "extensions.display_ipm_quadrant"
ImageCrossHairGraph = "extensions.display_image_crosshair_graph"
VectorLimitedDoubleLineEdit = "extensions.edit_limited_lineedit"
VectorLimitedIntLineEdit = "extensions.edit_limited_lineedit"
VectorGraphWithLinearRegions = "extensions.display_vector_graph_linear_regions"
VectorXYGraphWithLinearRegions = "extensions.display_vector_graph_linear_regions"
LimitedDoubleLineEdit = "extensions.edit_limited_lineedit"
LimitedIntLineEdit = "extensions.edit_limited_lineedit"
MetroXasGraph = "extensions.metro.xas_graph"
MetroSecAxisGraph = "extensions.metro.secaxis_graph"
MetroTwinXGraph = "extensions.metro.twinx_graph"
MotorStageAssignmentTable = "extensions.edit_motor_stage_table"
MotorParametersTable = "extensions.edit_motor_parameters_table"
MultipleDetectorCells = "extensions.display_detector_cells"
NetworkX = "extensions.display_networkx"
NotificationConfigurationView = "extensions.event_manager.edit_notification_configuration_view"
PeakIntegrationGraph = "extensions.peak_integration_graph"
PointAndClick = "extensions.point_and_click"
PolarPlot = "extensions.display_polar_plot"
PulseIdMap = "extensions.display_pulse_info"
RecoveryCompareView = "extensions.display_recovery_compare_view"
RectRoiGraph = "extensions.roi_graph"
RunAssistantModuleSelection = "extensions.detectors.module_selection.run_assistant"
RunAssistantOverview = "extensions.daq.edit_runassistant"
RunMonitorHistory = "extensions.daq.display_runhistory"
ScatterPosition = "extensions.display_scatter_position"
ScantoolDynamic = "extensions.scantool.display_scantool_dynamic"
ScantoolDeviceView = "extensions.scantool.display_scantool_device_view"
ScantoolTemplates = "extensions.scantool.edit_scantool_templates"
SelectionTable = "extensions.edit_selection_table"
LiveDataIndicator = "extensions.display_live_data_indicator"
StateAwareComponentManager = "extensions.stateaware_component_manager"
TableRoiGraph = "extensions.roi_graph"
Base64Image = "extensions.display_base64_string"
TickedImageGraph = "extensions.display_ticked_image_graph"
TriggerSliceGraph = "extensions.display_trigger_slice_graph"
UncertaintyGraph = "extensions.display_uncertainty_graph"
XasGraph = "extensions.display_xas_graph"
XYTwoAxisGraph = "extensions.display_two_axis_graph"
ZonePlateGraph = "extensions.zone_plate_graph"

[project]
dynamic = ["version"]
name = "GUIExtensions"
authors = [
    {name = "Data Department"},
]
description = ""
readme = "README.md"
dependencies = [
]

[project.optional-dependencies]
all = ["cadge>=0.2.0"]